--- a/css/main.css
+++ b/css/main.css
@@ -54,4 +54,126 @@ header div {
 .flag {
   display: flex;
   justify-content: flex-end;
+
+}
+
+
+
+.canada {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  margin: 30px;
+}
+
+.canadaWinning {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  align-content: center;
+}
+
+.canadaWinning img {
+  width: 447px;
+  height: 300px;;
+}
+
+.canadaVsUsa {
+  width: 50%;
+  margin-left: 10px;
+  margin-right: 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
+
+}
+.canadaVsUsa h2 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.canadaVsUsa p {
+  padding-right: 100px;
+}
+
+.graphs {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding-top: 50px;
+  border-top: 1px solid #333;
+}
+
+
+.vis {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.vis h2 {
+  font-size: 14px;
+  font-weight: 600;
+  margin: 10px 0px;
+}
+
+.vis p {
+  font-size: 12px;
+}
+
+.medalCon {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  margin: 30px;
+  margin-bottom: 50px;
+  padding-top: 50px;
+  border-top: 1px solid #333;
+}
+
+.medal {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.medals {
+  width: 50%;
+  margin-left: 10px;
+  margin-right: 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
+}
+
+.medals h2 {
+  padding-left: 100px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.medals p {
+  padding-left: 100px;
+}
+.medal img {
+  width: 443px;
+  height: 250px;
+}
+
+
+footer {
+    border-top: 1px solid #333;
+    padding: 20px;
+    font-size: 10px;
+    font-weight: 600;
 }
